--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ serde = { version = "1.0.219", features = ["derive"] }
 gtk = { version = "0.9.6", package = "gtk4" }
 glib = "0.20.9"
 chrono = "0.4.40"
+rayon = "1.10.0"
